filechooser: Do not parent the optionswidget

KFileWidget does already reparent the widget and it breaks the layout

BUG:505746
FIXED-IN:6.4.1